rama-utils/tests/include_dir_no_compile/include_dir_with_wrong_token.rs
use ::rama_utils::include_dir::{Dir, include_dir};

static _ASSETS: Dir = include_dir!(42);

fn main() {}
